# CS225A-Project

./: CMakeLists.txt  README.md
Environment/: CMakeLists.txt  Divebot_Hybrid.urdf  controller_demo.cpp  controller_final.cpp  controller_manip.cpp  controller_nav.cpp  controller_sat.cpp  controllers_schematic.jepg  satellite.urdf  simviz_camera.cpp  simviz_spacerobotics.cpp  world.urdf
Satellite CAD Model/: satellite.mtl
model/test_objects/meshes/visual/: satellite5.mtl
